[package]
name = "holochain_websocket"
version = "0.3.1-rc.0"
description = "Holochain utilities for serving and connection with websockets"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_websocket"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"

# reminder - do not use workspace deps
[dependencies]
futures = "0.3"
holochain_serialized_bytes = { version = "=0.0.54", git = "https://github.com/coasys/holochain-serialization.git", rev = "6eaa4ea8913bfd977fcc4577e833f4dc18a215f7" }
holochain_types = { version = "^0.3.1-rc.0", path = "../holochain_types" }
serde = "1.0.98"
serde_bytes = "0.11.14"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
holochain_trace = { path = "../holochain_trace" }
criterion = "0.5"

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "full_connect"
harness = false
